--- a/ebook-c3.ipynb
+++ b/ebook-c3.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,16 +89,19 @@
     "        3. Coordenadas esféricas. \n",
     "    5. Aplicações das integrais duplas e triplas. \n",
     "    6. Cálculo de volumes, massas, momentos estáticos, centros de massa, momentos de inércia.\n",
+    "    \n",
+    "    \n",
+    "   \n",
     "\n",
     "\n"
    ]
   },
   {
-   $\psi +2x - y \div (4 - 2) = \int x dx\neq \phi \times \alpha$
-
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -181,6 +184,13 @@
     "### 3.9 Integrais de Linha Independentes do Caminho: \n",
     "    1. Caracteriçação de campos conservativos."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
